--- a/2_text-retrieval/Assignment_1/config.toml
+++ b/2_text-retrieval/Assignment_1/config.toml
@@ -20,13 +20,13 @@ ngram = 1
 filter = "default-unigram-chain"
 
 [ranker]
-#method = "bm25"
-#k1 = 1.2
-#b = 0.75
-#k3 = 500
-method = "pl2"
-c = 7
-lamda = 0.1
+method = "bm25"
+k1 = 1.2
+b = 0.75
+k3 = 500
+#method = "pl2"
+#c = 7
+#lamda = 0.1
 
 [classifier]
 method = "one-vs-all"
